Fixed spacing on /platforn head

--- a/src/main/resources/static/css/main.css.css
+++ b/src/main/resources/static/css/main.css.css
@@ -1355,7 +1355,7 @@ form.lpeRegForm .mktInput {
 .platform-index--header:after {
   content: "";
   opacity: 0.1;
-  background: url("../img/platform-bg.png") 100% 0 no-repeat;
+  background: url("../img/platform-bg.png") 100% 50% no-repeat;
   position: absolute;
   top: 0;
   left: 0;
